5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1578_1330.log
== TEST (2019-03-11 20:01:20) 
-- CODE:
A=6
C=250
T=41.66
print(T)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:01:23) 
-- CODE:
A=6
C=250
T=41.66
print(T)
-- EXECUTION TIME:
0.204795
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:01:31) 
-- CODE:
A=6
C=250
T=41
print(T)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:01:34) 
-- CODE:
A=6
C=250
T=41
print(T)
-- EXECUTION TIME:
0.154353
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:01:32) 
-- CODE:
print(round(250, 2)/4)
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:01:43) 
-- CODE:
print(round(250, 2)/4)
-- OUTPUT:
62.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:02:15) 
-- CODE:
print(round 250/4, 2)
-- ERROR:
File "XXXX", line 1
    print(round 250/4, 2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:02:47) 
-- CODE:
print(round 250/6,2)
-- ERROR:
File "XXXX", line 1
    print(round 250/6,2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:03:10) 
-- CODE:
print(round (250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:03:12) 
-- CODE:
print(round (250/6,2))
-- EXECUTION TIME:
0.149551
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
